--- a/style.css
+++ b/style.css
@@ -176,7 +176,9 @@ nav a{
     header nav{
         margin-right: 80px;
     }
-
+    
+    .slide{
+        overflow-x: hidden;
     nav a{
         font-size: 18px;
         margin-bottom: 10px;
